refactor: refactor stats
