# docs/swagger.yaml
@@ -134,110 +134,6 @@ paths:
           schema:
             $ref: '#/definitions/errorno.ErrorResponse'
       summary: Get server status of the cluster
-  /v1/stats/append/bytes:
-    get:
-      operationId: streamAppendsStats
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.TableResult'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/errorno.ErrorResponse'
-      summary: Get rate of bytes successfully written to the stream.
-  /v1/stats/append/failed:
-    get:
-      operationId: failedAppendStats
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.TableResult'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/errorno.ErrorResponse'
-      summary: Get total number of failed append request of a stream
-  /v1/stats/append/records:
-    get:
-      operationId: appendInRecordStats
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.TableResult'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/errorno.ErrorResponse'
-      summary: Get rate of records successfully written to the stream
-  /v1/stats/append/success:
-    get:
-      operationId: totalAppendStats
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.TableResult'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/errorno.ErrorResponse'
-      summary: Get total number of success append requests of a stream
-  /v1/stats/histogram/server_append_latency:
-    get:
-      operationId: appendLatency
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.TableResult'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/errorno.ErrorResponse'
-      summary: Get stream append latency stats
-  /v1/stats/histogram/server_append_request_latency:
-    get:
-      operationId: appendRequestLatency
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.TableResult'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/errorno.ErrorResponse'
-      summary: Get stream append request latency stats
-  /v1/stats/send/records:
-    get:
-      operationId: sendOutRecords
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.TableResult'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/errorno.ErrorResponse'
-      summary: Get rate of records successfully sent by the server per subscription
-  /v1/stats/sends/bytes:
-    get:
-      operationId: subscriptionSendsStats
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.TableResult'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/errorno.ErrorResponse'
-      summary: Get rate of bytes sent by the server per subscription
   /v1/streams/:
     get:
       operationId: streamList
